--- a/craigkanye_euou/styles/general.sass
+++ b/craigkanye_euou/styles/general.sass
@@ -4,11 +4,11 @@ ul
 header
   height: 300px
   background: linear-gradient(305deg, #5c1bb1d7, transparent)
-  color: #61afaf
+  color: #95da2d9e
   padding: 15px 30px
   background: url("https://images.unsplash.com/photo-1513475382585-d06e58bcb0e0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cmVhZGluZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60")
   background: cover
-  flex-direction: column
+  flex-direction: row
   >div
     width: 100%
     max-width: 1250px
@@ -45,14 +45,14 @@ footer
 
 main
   width: 100%
-  max-width: 1550px
+  max-width: 100%
   margin: auto
   padding: 80px 30px
   min-height: 100%
-  background: url('https://images.unsplash.com/photo-1513475382585-d06e58bcb0e0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cmVhZGluZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60'), url('https://images.unsplash.com/photo-1495446815901-a7297e633e8d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Ym9va3N8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60')
-  background-size: cover
+  background: url('https://images.unsplash.com/photo-1579547116322-25caa6d089bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzV8fGJsdXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60')
+  background-size: cover 
 
-.home_body
+.home_books
   color: #a7a227d7
   display: flex
   flex-direction: column
@@ -70,27 +70,31 @@ main
       direction: rtl
     .content
       width: 30%
+      
+.home_body
+  color: #e9c6c2d7
+  display: flex
+  flex-direction: column
+  gap: 70px
+
+  .image
+    width: 30%
+  .card
+    display: flex
+    flex-direction: column
+    gap: 25px
+    justify-content: center
+    align-content: center
+    align-items: center
+    &:nth-child(even)
+      direction: rtl
+    .content
+      width: 50%
 
 .about_us_list
   display: flex
   flex-direction: column
 
-.getbooks_list
-  display: flex
-  flex-direction: column
-  gap: 30px
-
-  .card
-    position: relative
-    h2
-      position: absolute
-      width: 100%
-      top: 50%
-      text-align: center
-      font-size: 18px
-      color: white
-      text-transform: uppercase
-      text-shadow: 1px 1px 20px black
 
 .events_page
   display: flex
@@ -124,6 +128,9 @@ main
       width: 30%
 
 .event_single_page
+  display: flex
+  flex-direction: row
+  gap: 30px
   .email_registration
     margin-top: 25px
     label
