--- a/craigkanye_euou/styles/globals.css
+++ b/craigkanye_euou/styles/globals.css
@@ -35,3 +35,26 @@ a {
 }
 
 /* Rest of your styles */
+
+/* CSS for phones */
+@media only screen and (max-width: 480px) {
+  main {
+    padding: 40px 15px;
+  }
+}
+
+/* CSS for iPads */
+@media only screen and (min-width: 481px) and (max-width: 1024px) {
+  main {
+    max-width: 768px;
+    padding: 60px 20px;
+  }
+}
+
+/* CSS for laptops and larger screens */
+@media only screen and (min-width: 1025px) {
+  main {
+    max-width: 1550px;
+    padding: 80px 30px;
+  }
+}
