Pending changes exported from your codespace

--- a/craigkanye_euou/styles/globals.css
+++ b/craigkanye_euou/styles/globals.css
@@ -60,3 +60,10 @@ a {
     padding: 80px 30px;
   }
 }
+
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
